code-with-quarkus/openshift/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-app
  labels:
    app: quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-app
  template:
    metadata:
      labels:
        app: quarkus-app
    spec:
      containers:
        - name: quarkus-app
          # Byt ut med din OpenShift Image Registry path
          image: image-registry.openshift-image-registry.svc:5000/quarkus-demo/quarkus-app:latest
          ports:
            - containerPort: 8080
