code-with-quarkus/openshift/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: registry.redhat.io/rhel8/postgresql-13:latest
          ports:
            - containerPort: 5432
