code-with-quarkus/openshift/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app
spec:
  selector:
    app: quarkus-app
  ports:
    - port: 8080
      targetPort: 8080
